overflow and searchbar fix property

--- a/src/emailList.css
+++ b/src/emailList.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   overflow: hidden;
-}
+} */
 .emailList {
   flex: 1;
   overflow: scroll;
